# pdf-langchain-rag-assistant

./: README.md
rag-backend/: .env.sample  .gitIgnore  pyproject.toml
rag-backend/src/rag_backend/: __init__.py  api.py  app.py  config.py  rag.py
rag-backend/src/rag_backend/clients/: __init__.py  embeddings.py  llm.py  vector_store.py
rag-frontend/: README.md  index.html  tailwind.config.ts
rag-frontend/src/: App.tsx  index.css
rag-frontend/src/components/: ChatInterface.tsx  ChatMessage.tsx  FileUpload.tsx  LoadingAnimation.tsx  PDFViewer.tsx  TypingIndicator.tsx
rag-frontend/src/pages/: ChatPDF.tsx  Index.tsx
