[project]
name = "rag-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ahmedashfaq850", email = "ahmedashfaq6777@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "black>=25.1.0",
    "chromadb>=1.0.9",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.9",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-cli>=0.0.36",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-google-genai>=2.1.4",
    "langchain-huggingface>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "pydantic>=2.11.4",
    "pypdf>=5.5.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "unstructured>=0.17.2",
    "uvicorn>=0.34.2",
]

[project.scripts]
rag-backend = "rag-backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
